--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@
 
 button {
   background-color: #f4ce14;
-  color: black;
+  color: #495e57;
   padding: 14px 18px;
   border: none;
   text-decoration: none;
@@ -26,6 +26,14 @@ button {
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
+  transition: all 0.2s;
+}
+
+button:hover {
+  background-color: #495e57;
+  color: #f4ce14;
+  box-shadow: 10px 10px 20px 0px rgba(0, 0, 0, 0.75);
+  transform: translateY(-5px);
 }
 
 .banner-img {
