--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -33,10 +33,12 @@
   width: 100%;
   height: 233px;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .menu-content {
   padding: 5px 15px;
+  cursor: pointer;
 }
 
 .menu-content .heading {
